--- a/app/public/404.html
+++ b/app/public/404.html
@@ -12,7 +12,7 @@
       const route = path.slice(repo.length);
       sessionStorage.setItem('redirect', route);
     }
-    window.location.replace(repo + '/');
+    window.location.replace(`${repo}/`);
   </script>
 </head>
 <body>
